chore: alter json-server version

--- a/vercel.json
+++ b/vercel.json
@@ -2,14 +2,19 @@
   "version": 2,
   "builds": [
     {
-      "src": "db.json",
-      "use": "@vercel/static"
+      "src": "server.js",
+      "use": "@vercel/node",
+      "config": {
+        "includeFiles": [
+          "db.json"
+        ]
+      }
     }
   ],
   "routes": [
     {
       "src": "/(.*)",
-      "dest": "/"
+      "dest": "server.js"
     }
   ]
 }
